cabal-version:      3.4
name:               aoc
version:            0.1.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pedro Rodrigues
maintainer:         csixteen@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
build-type: Simple

common build-directives
 build-depends: base ^>= 4.19.0.0
 default-language: Haskell2010
 ghc-options: -O2
              -Wall
              -threaded
              -rtsopts "-with-rtsopts=-N"
                    
common common-extensions
 default-extensions: BlockArguments
                   , DerivingVia
                   , FlexibleInstances
                   , LambdaCase
                   , RecordWildCards
                   , TypeSynonymInstances

library
  import: common-extensions
  build-depends: 
        base ^>= 4.19.0.0
      , containers  >= 0.6.8
      , linear      >= 1.22
      , multiset    >= 0.3.4.3
      , parsec      >= 3.1.17.0
      , relude      >= 1.2.1.0
      , split       >= 0.2.4
      , text        >= 2.1
  exposed-modules:
    AOC.Day1
    AOC.Day2
    AOC.Day3
    AOC.Day4
    AOC.Day5
    AOC.Day6
    AOC.Day7
    AOC.Day8
    AOC.Day9
    AOC.Day10
    AOC.Day11
    AOC.Day12
    AOC.Day13
    AOC.Day14
    AOC.Day15
    AOC.Day16
    AOC.Day17
    AOC.Day18
    AOC.Day19
    AOC.Day20
    AOC.Day21
    AOC.Day22

  hs-source-dirs:
    src/

  default-language: Haskell2010

executable aoc
    import: build-directives, common-extensions
    main-is: Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          parsec >= 3.1.17.0
        , relude >= 1.2.1.0
        , text >= 2.1
    hs-source-dirs:   src/
    other-modules: AOC.Day22
