[package]
name = "aoc-rs"
version = "0.1.0"
authors = ["Pedro Rodrigues <csixteen@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib"]

[dependencies]
aoc = { path = "lib" }
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
