cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pedro Rodrigues
maintainer:         csixteen@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day1
      , Day2

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: UnitTest.hs
  other-modules:
      Day1
  hs-source-dirs:
      test
    , app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , Cabal
    , tasty
    , tasty-hunit
  default-language: Haskell2010