[package]
name = "Day19"
version = "0.1.0"
authors = ["Pedro Rodrigues <csixteen@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-core = { version = "0.1.0", path = "../../../lib/Rust/aoc" }
itertools = "0.9.0"
